Fixed problem with Width out of screen

--- a/css/invoice-list.css
+++ b/css/invoice-list.css
@@ -91,23 +91,6 @@ main {
 }
 
 
-
-/* Creation - Receive date Block */
-.dateForm {
-    border: 1px solid rgb(189, 189, 189);
-    height: 40px;
-    width: 240px;
-    cursor: pointer;
-    border-radius: 3px;
-    font-size: 15px;
-    font-family: 'Frank Ruhl Libre', serif;
-    margin-top: 10px;
-    text-align: center;
-}
-
-
-
-
 /* Table, list of Users */
 #table-block {
     width: 100%;
@@ -126,66 +109,90 @@ main {
     background-color: rgb(102, 102, 102);
 }
 
-.test {
+.invoiceTable {
     width: 90%;
 }
 
-.filterBlock-first {
-    width: 90%;
-    display: flex;
+
+/* Filter Block First START*/
+.dateForm {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgb(189, 189, 189);
+    cursor: pointer;
+    border-radius: 3px;
+    font-size: 15px;
+    font-family: 'Frank Ruhl Libre', serif;
+    text-align: center;
+    margin-top: 5px;
 }
 
-.filterBlock-first div {
-    display: flex;
-    flex-direction: column;
-    margin-right: 40px;
+select {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgb(189, 189, 189);
+    cursor: pointer;
+    border-radius: 3px;
+    font-size: 15px;
+    font-family: 'Frank Ruhl Libre', serif;
+    background-color: #F5F5F5;
 }
 
 label {
     font-weight: bold;
 }
 
-select {
-    border: 1px solid rgb(189, 189, 189);
-    height: 40px;
-    width: 240px;
-    cursor: pointer;
-    border-radius: 3px;
-    font-size: 15px;
-    font-family: 'Frank Ruhl Libre', serif;
-    margin-top: 10px;
-    padding-left: 10px;
-    background-color: #F5F5F5;
+.filterBlock-first {
+    width: 90%;
+    display: flex;
+    align-items: flex-end;
 }
 
+.byCreation-block {
+    display: flex;
+    flex-direction: column;
+    width: 240px;
+    margin-right: 20px;
+}
+
+.filterStatus-block {
+    width: 240px;
+    margin-right: 20px;
+}
+
+.filterBank-block {
+    width: 240px;
+}
+/* Filter Block First END*/
+
+
+/* Filter Block Second START */
 .filterBlock-second {
     width: 90%;
     display: flex;
     align-items: flex-end;
-    justify-content: space-between;
     margin: 20px 0;
 }
 
-.filterBlock-second-part-1 {
-    display: flex;
+.byReceive-block {
+    width: 240px;
+    margin-right: 20px;
 }
 
-.filterBlock-second-part-1 div {
-    display: flex;
-    flex-direction: column;
-    margin-right: 40px;
+.filterMerchant-block {
+    width: 240px;
+    margin-right: 20px;
 }
 
-
-.filterBlock-second-part-2 {
-    display: flex;
-    align-items: flex-end;
-    min-width: 270px;
+.filterDocuments-block {
+    width: 240px;
 }
+/* Filter Block Second END */
 
 
+/* Search Block START*/
 .input-search {
-    width: 250px;
+    width: 220px;
     height: 40px;
     background-color: #4D4D4D;
     border-radius: 3px 0 0 3px;
@@ -201,7 +208,7 @@ select {
 .search-btn {
     width: 40px;
     height: 40px;
-    padding: 10px;
+    padding: 12px;
     background-color: rgb(54, 54, 54);
     cursor: pointer;
     border-radius: 0px 3px 3px 0px;
@@ -211,6 +218,8 @@ select {
 .showClear-block {
     width: 90%;
     margin: 10px 0; 
+    display: flex;
+    justify-content: space-between;
 }
 
 .showClear-block button {
@@ -228,6 +237,12 @@ select {
 #showBtn:active, #clearFilterBtn:active {
     background-color: #12C7B2;
 }
+
+.searchBlock {
+    display: flex;
+}
+/* Search Block  END*/
+
 
 
 /* Animations */
